# msal-rust

./: .gitignore  Cargo.toml
examples/auth-code/: Cargo.toml
examples/auth-code/src/: main.rs
examples/client_credentials/: Cargo.toml
examples/client_credentials/src/: main.rs
examples/device-code/: Cargo.toml
examples/device-code/src/: main.rs
examples/refresh_token/: Cargo.toml
examples/refresh_token/src/: main.rs
src/: lib.rs  main.rs
