[package]
name = "msal"
version = "0.1.0"
authors = ["sagonzal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }