[package]
name = "auth-code"
version = "0.1.0"
authors = ["sagonzal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
rocket_contrib = {version = "0.4.0", features = ["json"]}
msal = {path = "../../"}
serde = { version = "1.0", features = ["derive"] }